--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name_full">FINTEHWALLET</string>
-    <string name="app_name">FINTEHWALLET</string>
+    <string name="app_name_full">KITAWALLET</string>
+    <string name="app_name">KITAWALLET</string>
     <!--侧边栏-->
     <string name="navigation_drawer_open">Открыть панель навигации</string>
     <string name="navigation_drawer_close">Закрыть панель навигации</string>
@@ -10,7 +10,7 @@
 
     <string name="title_activity_sign_up_button">Кнопка регистрации</string>
     <string name="sign_up_button">Зарегистрироваться</string>
-    <string name="dummy_content">FINTEHWALLET</string>
+    <string name="dummy_content">KITAWALLET</string>
 
     <string name="splash_page_message">Владей благами</string>
 
@@ -68,7 +68,7 @@
     <string name="import_activity_account_model">Модель Аккаунта</string>
     <string name="title_activity_settings">Настройки</string>
 
-    <string name="about_activity_text">Для поддержки нашего приложения купитие токены FINTEH или мы будем рады получить прямой дар.</string>
+    <string name="about_activity_text">Для поддержки нашего приложения купитие токены KITATOKEN или мы будем рады получить прямой дар.</string>
     <string name="about_activity_version">Версия</string>
     <string name="about_activity_button">ПОЖЕРТВОВАТЬ</string>
 
