--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BTS Wallet</string>
+    <string name="app_name">KITAWALLET</string>
 
     <!--侧边栏-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -161,7 +161,7 @@
 
     <string name="trade_fragment_quantity">数量</string>
     <string name="label_change">涨跌:</string>
-    <string name="app_name_full">BTS Wallet</string>
+    <string name="app_name_full">KITAWALLET</string>
 
 
 </resources>
