--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name_full">FINTEHWALLET</string>
-    <string name="app_name">FINTEHWALLET</string>
+    <string name="app_name_full">KITAWALLET</string>
+    <string name="app_name">KITAWALLET</string>
     <!--侧边栏-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -10,7 +10,7 @@
 
     <string name="title_activity_sign_up_button">SignUpButtonActivity</string>
     <string name="sign_up_button">LOG IN</string>
-    <string name="dummy_content">FINTEHWALLET</string>
+    <string name="dummy_content">KITAWALLET</string>
 
     <string name="splash_page_message">Possess your wealth</string>
 
@@ -68,7 +68,7 @@
     <string name="import_activity_account_model">Account Model</string>
     <string name="title_activity_settings">Settings</string>
 
-    <string name="about_activity_text">for support our app buy FINTEH tokens or we appreciate it for getting donation from you.</string>
+    <string name="about_activity_text">for support our app buy KITATOKEN tokens or we appreciate it for getting donation from you.</string>
     <string name="about_activity_version">Version</string>
     <string name="about_activity_button">DONATE</string>
 
